Added unit tests and fixed micro bugs